--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,19 @@
-.app {
+.App {
   text-align: center;
 }
 
-.app-header {
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -13,6 +24,15 @@
   color: white;
 }
 
-.title {
-  color: rgb(172, 123, 123);
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
