--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #149eca;
+  background-color: rgb(223, 223, 223);
   padding: 0 5%;
 }
